--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-left: 800px;
-  padding-right: 40px;
+  padding-left: 65%;
+  padding-right: 5%;
 }
 .inscription {
   grid-area: inscription;
@@ -112,6 +112,7 @@ header {
 #desktopversion {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: baseline;
 }
@@ -124,10 +125,9 @@ header {
   border: solid 2px #f2f2f2;
   border-radius: 50px;
   border-left: none;
-  margin-left: 30px;
+  margin-left: 2%;
   margin-top: 5px;
-  margin-right: 30px;
-  padding: 0px 20px 0px 0px;
+  padding-right: 0px;
 }
 .filtre:hover {
   background-color: #deebff;
@@ -161,11 +161,10 @@ header {
 }
 
 /*Body- Hébergements*/
-section {
+.hébergements {
   display: flex;
   justify-content: space-between;
-  flex-flow: row wrap;
-  align-items: center;
+  flex-wrap: wrap;
   padding-left: 30px;
   padding-right: 30px;
   margin-left: 20px;
@@ -173,8 +172,7 @@ section {
 }
 #hébergements {
   background-color: #f2f2f2;
-  height: 600px;
-  width: 800px;
+  width:60%;
   border-radius: 20px;
   padding: 30px 30px 30px 30px;
   margin-right: 30px;
@@ -188,6 +186,7 @@ section {
   justify-content: space-between;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -233,26 +232,23 @@ h3 {
   bottom: 0;
   padding: 10px 0px 0px 10px;
 }
-
 article {
   position: relative;
 }
 .btnaffiche{
   position: absolute;
   bottom: 0;
-  margin-bottom: 50px;
   font-size: 1.1em;
   font-weight: bold;
-  margin-top: 10px;
+  margin-bottom: 3%;
 }
 
 /*Populaires*/
 #populaires {
   background-color: #f2f2f2;
-  height: 600px;
-  width: 400px;
+  width: 25%;
   border-radius: 20px;
-  margin: 0px 5px 30px 5px;
+  margin: 0px 5px 30px 18px;
   padding: 30px 20px 30px 20px;
 }
 .entete {
@@ -296,13 +292,16 @@ article {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin-bottom: 30px;
-  width: auto;
+  width: 100%;
   height: auto;
 }
 .h3mobile {
   display: none;
+}
+.h3desktop{
+  margin-left: 50px;
 }
 .port img {
   height: 405px;
@@ -363,18 +362,34 @@ footer {
   background-color: #f2f2f2;
 }
 
-
 /*facultatif*/
-@media screen and (min-width: 1280px) and (max-width: 1460px) {
+@media screen and (min-width: 768px) and (max-width: 1000px) {
   .headernav {
-    padding-left: 400px;
-    padding-right: 40px;
+    padding-left: 50%;
+    padding-right: 5%;
+  }
+  #hébergements{
+    width: 100%;
+  }
+  #populaires{
+    width:100%;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1280px) {
-  .headernav {
-    padding-left: 350px;
-    padding-right: 50px;
+@media screen and (max-width:1160px){
+  #hébergements{
+    width:30%;
+  }
+  #populaires{
+    width:30%;
+  }
+}
+
+@media screen and (max-width:1380px){
+  #hébergements{
+    width:70%;
+  }
+  #populaires{
+    width:70%;
   }
 }
 
@@ -397,8 +412,8 @@ footer {
     width: 130px;
   }
   .headernav {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 30%;
+    padding-right: 10%;
   }
   
   .filtre {
@@ -429,7 +444,7 @@ footer {
     font-size: 20px;
   }
   /*Body- Hébergements*/
-  section {
+  .hébergements {
     display: flex;
     justify-content: space-between;
     flex-flow: column-reverse wrap;
@@ -573,27 +588,29 @@ footer {
       "logo . inscription"
       "navbar navbar navbar";
     margin-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .inscription {
     font-size: 16px;
     margin-right: 0px;
+    padding-right: 20px;
   }
   #logo {
     width: 100px;
     margin-left: 5px;
+    padding-left: 20px;
   }
   .ancre {
-    font-size: 30px;
-    margin: 0px;
+    font-size: 15px;
+    margin: 0;
     width: 100%;
     border-bottom: solid#f2f2f2;
-    margin-top: 30px;
+    margin-top: 10px;
     margin-bottom: 15px;
-    padding-right: 100px;
-    padding-left: 110px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
+    padding-right: 20px;
+    padding-left: 60px;
   }
   .ancre:hover {
     border-bottom: solid #0065fc;
@@ -607,38 +624,36 @@ footer {
     padding-left: 0px;
     padding-right: 0px;
   }
-
   header h3 {
     margin-top: 0px;
-    margin-left: 50px;
-    font-size: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 23px;
   }
   header p {
-    font-size: 30px;
-    margin-left: 50px;
+    font-size: 15px;
+    margin-left: 20px;
   }
-  #info + p {
-    margin-left: 25px;
-    font-size: 35px;
-  }
-  .post {
+  /*revoir*/
+  .post{
     display: flex;
     flex-direction: row;
-    margin-left: 50px;
-    padding-top: 30px;
-    font-size: 35px;
-    margin-bottom: 30px;
+    justify-content: baseline;
   }
   .ecriture {
-    border-radius: 30px 0px 0px 30px;
-    padding: 30px 30px 25px 30px;
+    background-color: #f2f2f2;
+    border-radius: 20px 0px 0px 20px;
+    padding: 19px 22px 19px 22px;
+    margin-left: 20px;
+    margin-right: 0;
   }
-
   #clic {
-    padding: 30px 30px 30px 30px;
-    border: solid 3px #f2f2f2;
+    border: solid 1px #f2f2f2;
     border-left: none;
     border-right: none;
+    padding: 15px 15px 15px 15px;
+    font-size: 1em;
+    font-weight: bold;
   }
   #bouton {
     display: none;
@@ -649,139 +664,141 @@ footer {
   #loupe .fas {
     color: white;
     background-color: #0065fc;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 20px 20px 20px 20px;
     border: none;
-    padding: 35px 30px 35px 30px;
+    padding: 17px 17px 17px 17px;
     font-weight: 600;
-    margin-left: -25px;
+    margin-left: 0px;
+    margin-right: 20px;
   }
+  /**/
   #mobileversion {
     display: initial;
   }
   #desktopversion {
     display: none;
   }
+  .fil{
+    font-size: 20px;
+  }
   .mobilerow {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-top: 20px;
-    margin-left: 50px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right:20px;
     margin-bottom: 20px;
     width: 100%;
   }
- 
   .mobilecolumn {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 20px;
+    margin-right:20px;
     width: 100%;
   }
-  .mobilecolumn span + span {
-    margin-right: 320px;
-  }
-  .mobilecolumn span {
-    margin-right: 410px;
+  .mobilecolumn .filtre:nth-child(1){
+    margin-right: 180px;
     margin-bottom: 20px;
   }
-  header span {
-    border: solid 5px #f2f2f2;
+  .mobilecolumn .filtre:nth-child(2) {
+    margin-right: 100px;
+    margin-bottom: 20px;
+  }
+  .filtre {
+    border: solid 3px #f2f2f2;
     border-radius: 50px;
     padding-left: 0px;
     padding-right: 0px;
     margin-right: 20px;
     margin-left: 0px;
     border-left: none;
-    font-size: 30px;
+    font-size: 10px;
     font-weight: bold;
   }
-  header .fa {
+  .filtrename {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 18px;
+  }
+  .icône {
     color: #0065fc;
-    font-size: 25px;
-    border: solid 20px #deebff;
+    font-size: 20px;
+    border: solid 10px #deebff;
     background-color: #deebff;
     border-radius: 50%;
     padding: 5px 5px 5px 5px;
   }
-  .inf {
-    margin-bottom: 0px;
-    margin-left: 50px;
-    font-size: 30px;
+  #inf {
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 15px;
   }
-  #info {
-    color: #0065fc;
-    background-color: white;
-    border: solid 1px lightgrey;
-    border-radius: 50%;
-    padding: 15px 20px 15px 20px;
-    font-size: 0.6em;
-    margin-left: 15px;
+  .info + p{
+    margin-left: 0px;
   }
-  header span:hover {
+  
+  .filtre:hover {
     background-color: #deebff;
   }
-  span a {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
   /*Body- Hébergements*/
-  section {
+  .hébergements {
     display: flex;
     justify-content: space-between;
     flex-flow: column-reverse wrap;
     align-items: center;
-    padding-left: 0px;
-    padding-right: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-  h3 {
-    font-size: 35px;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
   #hébergements {
     background-color: white;
     height: auto;
     width: 100%;
     border-radius: 35px;
-    padding: 30px 30px 90px 40px;
-    margin: 0;
+    padding:0;
+    margin:0;
   }
 
   .hotel img {
-    height: 250px;
-    width: 670px;
-    border: solid 10px white;
-    border-bottom: solid 150px white;
+    height: 130px;
+    width: 330px;
+    border: solid 5px white;
+    border-bottom: solid 80px white;
     border-radius: 35px;
-    margin-top: 30px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     box-shadow: 1px 1px 5px#c4c4c9;
-    margin-left: 15px;
-    margin-right: 15px;
+  }
+  .héberg{
+    padding-right: 0px;
+    padding-left: 0px;
   }
   section h3 {
     margin-top: 20px;
   }
-
   article {
     position: relative;
   }
-  article span {
+  .btnaffiche {
     position: absolute;
     bottom: 0;
-    margin-bottom: 40px;
-    font-size: 28px;
+    margin-bottom: -40px;
+    font-size: 18px;
     font-weight: bold;
-    margin-top: 10px;
-    margin-left: 20px;
+    margin-left: 10px;
   }
   article p {
     position: absolute;
-    margin-left: 33px;
+    margin-left: 15px;
     margin-top: 50px;
-    font-size: 30px;
+    font-size: 17px;
   }
 
   /*Populaires*/
@@ -792,26 +809,26 @@ footer {
     margin-bottom: 20px;
   }
   .entete .fas {
-    font-size: 35px;
+    font-size: 20px;
   }
   #populaires {
     background-color: #f2f2f2;
-    height: 1000px;
     width: 100%;
+    height:1000px;
     border-radius: 0px;
-    margin: 0;
+    margin-right: 0;
     margin-bottom: 50px;
-    padding: 30px 35px 30px 35px;
     margin-top: 10px;
-    margin: 0;
+    padding: 5px 0px 5px 0px;
+
   }
   .populaire img {
-    height: 250px;
-    width: 250px;
+    height: 170px;
+    width: 170px;
     border: solid 10px white;
-    border-right: solid 450px white;
+    border-right: solid 120px white;
     border-radius: 35px;
-    margin: 10px 30px 0px 30px;
+    margin: 10px 0px 10px 0px;
     box-shadow: 1px 1px 5px#c4c4c9;
   }
   .populaire {
@@ -831,86 +848,44 @@ footer {
   }
 
   /*Activités*/
-
   #activités {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content:center;
     width: 100%;
-    margin-left: 35px;
     padding-bottom: 0;
     margin-bottom: 0;
+    margin-left: 0px;
   }
   .h3desktop {
     display: none;
   }
   .h3mobile {
     display: initial;
-    margin-bottom: 40px;
-    margin-top: 40px;
-    font-size: 35px;
-    padding-right: 315px;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    font-size: 23px;
+    padding-left: 10;
   }
-  .port img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
+  .port img,.fort img,.iles img,.calanques img,.dame img,.longchamps img {
+    height: 130px;
+    width: 330px;
+  }
+  .act img{
+    border-bottom: solid 50px white;
     box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
+    border-radius: 30px;
+    margin-top: 0;
   }
-
-  .fort img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
-    box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
-  }
-
-  .iles img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
-    box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
-  }
-  .calanques img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
-    box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
-  }
-  .dame img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
-    box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
-  }
-  .longchamps img {
-    height: 250px;
-    width: 670px;
-    border-bottom: solid 90px white;
-    box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 35px;
-    margin: 0px 0px 25px 0px;
-  }
-
   .petite {
     position: relative;
   }
   .petite h4 {
     position: absolute;
     bottom: 0;
-    padding-left: 45px;
-    font-size: 28px;
+    padding-left: 35px;
+    font-size: 17px;
+    padding-bottom: 2px;
   }
   .grande {
     position: relative;
@@ -918,27 +893,23 @@ footer {
   .grande h4 {
     position: absolute;
     bottom: 0;
-    padding-left: 45px;
-    font-size: 28px;
+    padding-left: 35px;
+    font-size: 17px;
+    padding-bottom: 2px;
   }
   /*foot{*/
-
   footer {
     background-color: #f2f2f2;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: flex-start;
-    padding: 50px 20px 50px 50px;
     margin-left: 0;
+    margin-top: 20px;
     width: 100%;
   }
-  footer p {
-    font-weight: bold;
-    padding-top: 25px;
-    font-size: 28px;
-  }
-  .propos, .hébergements, .assistance {
-    font-size: 25px;
+  .propos, .footerhébergements, .assistance {
+    font-size: 15px;
+    margin-top: 20px;
   }
 }
