--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,12 @@ img {
 
 /*Header*/
 header {
-  margin: 10px 80px 0px 80px;
+  margin: 10px 80px 0px 60px;
 }
 .navigation {
   display: grid;
   align-items: center;
   max-width: 1515px;
-  margin: auto;
   grid-template-columns: auto 1fr auto;
   grid-template-areas: "logo navbar inscription";
   margin: 0;
@@ -103,7 +102,7 @@ header {
   color: white;
   border-radius: 0px 10px 10px 0px;
   border: none;
-  padding: 15px 15px 15px 15px;
+  padding: 17px 15px 15px 15px;
   font-weight: 600;
 }
 #loupe {
@@ -129,7 +128,7 @@ header {
   border-left: none;
   margin-left: 2%;
   margin-top: 5px;
-  padding-right: 0px;
+  margin-right: 30px;
 }
 .filtre:hover {
   background-color: #deebff;
@@ -169,15 +168,14 @@ header {
   flex-wrap: wrap;
   padding-left: 30px;
   padding-right: 30px;
-  margin-left: 20px;
-  margin-right: 20px;
+  width: 100%;
 }
 #hébergements {
   background-color: #f2f2f2;
-  width:60%;
+  width:55%;
   border-radius: 20px;
   padding: 30px 30px 30px 30px;
-  margin-right: 30px;
+  margin-right: 20px;
   margin-left: 20px;
   margin-bottom: 30px;
 }
@@ -248,9 +246,9 @@ article {
 /*Populaires*/
 #populaires {
   background-color: #f2f2f2;
-  width: 26%;
+  width: 25%;
   border-radius: 20px;
-  margin: 0px 5px 30px 18px;
+  margin: 0px 5px 30px 10px;
   padding: 30px 20px 30px 20px;
 }
 .entete {
@@ -290,11 +288,17 @@ article {
 }
 
 /*Activités*/
+.activités{
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 30px;
+}
 #activités {
-  display: flex;
+  display: grid;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:"port iles fort calanques dame longchamps"; 
   margin-bottom: 30px;
   width: 100%;
   height: auto;
@@ -303,37 +307,47 @@ article {
   display: none;
 }
 .h3desktop{
-  margin-left: 50px;
+  margin-left: 10px;
 }
 .port img {
   height: 405px;
-  width: 300px;
+  width: 80%;
+  grid-area: port;
 }
 .fort img {
-  height: 220px;
-  width: 305px;
+  height: 210px;
+  width: 80%;
+  grid-area: fort;
 }
 .iles img {
-  height: 90px;
-  width: 305px;
+  height: 120px;
+  width: 80%;
+  grid-area: iles;
 }
 .calanques img {
   height: 405px;
-  width: 300px;
+  width: 80%;
+  grid-area: calanques;
 }
 .dame img {
   height: 150px;
-  width: 305px;
+  width: 80%;
+  grid-area: dame;
 }
 .longchamps img {
   height: 160px;
-  width: 305px;
+  width: 80%;
+  grid-area: longchamps;
 }
 .act img{
   border-bottom: solid 50px white;
   border-radius: 20px;
   box-shadow: 4px 4px 5px #f2f2f2;
-  margin: 20px 30px 0px 20px;
+  margin: 10px 5px 10px 5px;
+  width: 90%;
+}
+.{
+  margin-right: 0px;
 }
 .petite {
   position: relative;
@@ -341,6 +355,7 @@ article {
 .petite h4 {
   position: absolute;
   bottom: 0;
+  padding-bottom: 5px;
   padding-left: 40px;
   font-weight: bolder;
 }
@@ -350,7 +365,7 @@ article {
 .grande h4 {
   position: absolute;
   bottom: 0;
-  padding-bottom: 20px;
+  padding-bottom: 25px;
   padding-left: 40px;
   font-weight: bolder;
 }
@@ -388,10 +403,10 @@ footer {
 
 @media screen and (max-width:1380px){
   #hébergements{
-    width:70%;
+    width:60%;
   }
   #populaires{
-    width:70%;
+    width: 60%;
   }
 }
 
@@ -781,7 +796,7 @@ footer {
     width: 87%;
     border: solid 5px white;
     border-bottom: solid 80px white;
-    border-radius: 20px;
+    border-radius: 25px;
     box-shadow: 1px 1px 5px#c4c4c9;
     margin-top: 20px;
     margin-right: 20px;
@@ -878,7 +893,7 @@ footer {
   .act img{
     border-bottom: solid 50px white;
     box-shadow: 10px 10px 10px #f2f2f2;
-    border-radius: 30px;
+    border-radius: 25px;
     margin: 0px 20px 0px 20px;
   }
   .petite {
