--- a/styles.css
+++ b/styles.css
@@ -577,7 +577,6 @@ footer {
   }
   #logo {
     width: 100px;
-    margin-left: 5px;
     padding-left: 20px;
   }
   .ancre {
@@ -765,6 +764,7 @@ footer {
     margin-left: 20px;
   }
   section h3 {
+    margin-left: 20px;
     margin-top: 20px;
   }
   article {
@@ -776,7 +776,7 @@ footer {
     margin-bottom: -40px;
     font-size: 18px;
     font-weight: bold;
-    margin-left: 10px;
+    margin-left: 20px;
   }
   article p {
     position: absolute;
@@ -828,9 +828,18 @@ footer {
     font-size: 13px;
   }
   /*Activités*/
+  .activityCard {
+    box-shadow:0 0 10px #0000002e;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    transition-duration: 0.1s;
+  }
   .activity {
-    grid-template-columns: repeat(auto,4,1fr,auto);
-    grid-template-rows: auto 10rem 2rem 10rem 2rem 10rem 2rem 10rem 2rem 10rem 2rem 10rem auto;
+    grid-column: 1;
+    grid-template-rows: auto 12rem 2rem 12rem 2rem 12rem 2rem 12rem 2rem 12rem 2rem 12rem auto;
+    margin: 30px 20px 40px 20px;
   }
   .activityCard1 {
     grid-row: 2/2;
