--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ a {
 }
 
 a:hover,
-section p:hover {
+.ancre:hover {
   color: #0065fc;
 }
 
@@ -164,20 +164,16 @@ header {
 /*Body- Hébergements*/
 .hébergements {
   display: flex;
-  flex-wrap: wrap;
-  gap:10px;
-  padding-left: 30px;
-  padding-right: 30px;
+ flex-direction: row;
   width: 100%;
 }
 #hébergements {
   background-color: #f2f2f2;
   width:55%;
   border-radius: 20px;
-  padding: 30px 30px 30px 30px;
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-bottom: 30px;
+  padding: 30px 30px 40px 30px;
+  margin-bottom: 45px;
+  margin-left: 50px;
 }
 .héberg {
   display: flex;
@@ -204,6 +200,10 @@ h3 {
   border-radius: 20px;
   margin-top: 30px;
   box-shadow: 1px 1px 5px#c4c4c9;
+  transition-duration: 0.1s;
+}
+.hotel:hover{
+  transform: scale(1.02);
 }
 .hotel:nth-child(1) {
   order: 4;
@@ -239,15 +239,16 @@ article {
   bottom: 0;
   font-size: 1.1em;
   font-weight: bold;
-  margin-bottom: 3%;
+  margin-bottom: 7%;
+  margin-left: 2%;
 }
 
 /*Populaires*/
 #populaires {
   background-color: #f2f2f2;
-  width: 25%;
+  width: 28%;
   border-radius: 20px;
-  margin: 0px 5px 30px 10px;
+  margin: 0px 50px 45px 57px;
   padding: 30px 20px 30px 20px;
 }
 .entete {
@@ -278,6 +279,10 @@ article {
   border-radius: 20px;
   margin: 10px 30px 10px 30px;
   box-shadow: 1px 1px 5px#c4c4c9;
+  transition-duration: 0.1s;
+}
+.populaire:hover{
+  transform: scale(1.02);
 }
 .populaire p {
   position: absolute;
@@ -362,7 +367,7 @@ footer {
   background-color: #f2f2f2;
 }
 
-/*facultatif*/
+
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .headernav {
     padding-left: 50%;
@@ -375,7 +380,8 @@ footer {
     width:100%;
   }
 }
-@media screen and (max-width:1370px) and (min-width:1100px){
+
+@media screen and (min-width:1100px) and (max-width:1384px){
   .hotel img {
     width: 280px;
     height: 110px;
@@ -391,7 +397,7 @@ footer {
     padding-left:40px;
   }
   #populaires{
-    width: 27%;
+    width: 50%;
   }
   .populaire img {
     height: 170px;
@@ -400,17 +406,10 @@ footer {
   }
   .populaire p {
     padding-left: 200px;
-    
-}
-}
-@media screen and (min-width: 768px) and (max-width: 1310px) {
+    }
   #hébergements{
-    width:50%;
-
-  }
-  #populaires{
-    width: 60%;
-  }
+    width:50%
+}
 }
 
 /*Version Ipad*/
@@ -471,10 +470,10 @@ footer {
   }
   #hébergements {
     height: auto;
-    width: 600px;
+    width: 80%;
     border-radius: 20px;
-    padding: 30px 30px 90px 30px;
-    margin: 0;
+    padding: 30px 30px 60px 30px;
+    margin: 0px 50px 50px 50px;
   }
   .hotel img {
     width: 260px;
@@ -494,11 +493,13 @@ footer {
   
   #populaires {
     height: 880px;
-    width: 620px;
+    width: 82%;
     margin: 0;
     margin-bottom: 50px;
     padding: 30px 20px 30px 20px;
     margin-top: 10px;
+    margin-right:50px;
+    margin-left: 50px;
   }
   .populaire img {
     height: 210px;
@@ -555,7 +556,7 @@ footer {
     padding: 50px 50px 50px 50px;
   }
 }
-
+/*Version mobile*/
 @media screen and (min-width:200px) and (max-width: 376px) {
   header{
     margin:0;
