--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ header {
 /*Body- Hébergements*/
 .hébergements {
   display: flex;
- flex-direction: row;
+  flex-direction: row;
   width: 100%;
 }
 #hébergements {
@@ -185,7 +185,7 @@ header {
   padding-bottom: 10px;
 }
 
-h3 {
+.hébergements h2 {
   font-weight: bold;
   color: black;
   margin-top: 30px;
@@ -367,7 +367,6 @@ footer {
   background-color: #f2f2f2;
 }
 
-
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .headernav {
     padding-left: 50%;
@@ -381,45 +380,215 @@ footer {
   }
 }
 
-@media screen and (min-width:1100px) and (max-width:1384px){
+@media screen and (min-width:1300px) and (max-width:1400px){
   .hotel img {
-    width: 280px;
+    width: 220px;
     height: 110px;
-    border-bottom: solid 90px white;
+    border-bottom: solid 70px white;
     margin-right: 30px;
     margin-left: 30px;
+    margin-bottom: 30px;
   }
   .hotel p{
-    font-size: 20px;
+    font-size: 15px;
     padding-left: 45px;
+    padding-bottom: 25px;
+  }
+  h2{
+    padding-left: 15px;
   }
   .btnaffiche{
     padding-left:40px;
+    padding-bottom: 0;
   }
   #populaires{
     width: 50%;
   }
   .populaire img {
     height: 170px;
-    width: 150px;
-    border-right: solid 190px white;
+    width: 180px;
+    border-right: solid 240px white;
+    margin-bottom: 40px;
   }
   .populaire p {
-    padding-left: 200px;
+    padding-left: 250px;
     }
   #hébergements{
-    width:50%
+    width:60%;
+    padding-right:15px;
+    padding-left: 15px;
+    padding-bottom: 50px;
 }
 }
 
+@media screen and (min-width:1275px) and (max-width:1340px){
+  .hotel img {
+    width: 200px;
+    height: 110px;
+    border-bottom: solid 70px white;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  .hotel p{
+    font-size: 15px;
+    padding-left: 45px;
+    padding-bottom: 25px;
+  }
+  h2{
+    padding-left: 15px;
+  }
+  .btnaffiche{
+    padding-left:40px;
+    padding-bottom: 0;
+  }
+  #populaires{
+    width: 50%;
+  }
+  .populaire img {
+    height: 170px;
+    width: 180px;
+    border-right: solid 240px white;
+    margin-bottom: 40px;
+  }
+  .populaire p {
+    padding-left: 250px;
+    }
+  #hébergements{
+    width:60%;
+    padding-right:15px;
+    padding-left: 15px;
+    padding-bottom: 50px;
+}
+}
+@media screen and (min-width:1215px) and (max-width:1300px){
+  .hotel img {
+    width: 180px;
+    height: 110px;
+    border-bottom: solid 70px white;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  .hotel p{
+    font-size: 15px;
+    padding-left: 45px;
+    padding-bottom: 25px;
+  }
+  h2{
+    padding-left: 15px;
+  }
+  .btnaffiche{
+    padding-left:40px;
+    padding-bottom: 0;
+  }
+  #populaires{
+    width: 50%;
+  }
+  .populaire img {
+    height: 170px;
+    width: 180px;
+    border-right: solid 240px white;
+    margin-bottom: 40px;
+  }
+  .populaire p {
+    padding-left: 250px;
+    }
+  #hébergements{
+    width:60%;
+    padding-right:15px;
+    padding-left: 15px;
+    padding-bottom: 50px;
+}
+}
+@media screen and (min-width:1100px) and (max-width:1230px){
+  .hotel img {
+    width: 200px;
+    height: 110px;
+    border-bottom: solid 70px white;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  .hotel p{
+    font-size: 15px;
+    padding-left: 45px;
+    padding-bottom: 15px;
+  }
+  h2{
+    padding-left: 15px;
+  }
+  .btnaffiche{
+    padding-left:40px;
+    padding-bottom: 0;
+  }
+  #populaires{
+    width: 30%;
+  }
+  .populaire img {
+    height: 130px;
+    width: 140px;
+    border-right: solid 180px white;
+    margin-bottom: 40px;
+  }
+  .populaire p {
+    padding-left: 190px;
+    }
+  #hébergements{
+    width:70%;
+    padding-right:15px;
+    padding-left: 15px;
+    padding-bottom: 50px;
+}
+}
+@media screen and (min-width:100px) and (max-width:1120px){
+  .hotel img {
+    width: 180px;
+    height: 110px;
+    border-bottom: solid 70px white;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  .hotel p{
+    font-size: 15px;
+    padding-left: 45px;
+    padding-bottom: 15px;
+  }
+  h2{
+    padding-left: 15px;
+  }
+  .btnaffiche{
+    padding-left:40px;
+    padding-bottom: 0;
+  }
+  #populaires{
+    width: 30%;
+  }
+  .populaire img {
+    height: 130px;
+    width: 140px;
+    border-right: solid 180px white;
+    margin-bottom: 40px;
+  }
+  .populaire p {
+    padding-left: 190px;
+    }
+  #hébergements{
+    width:70%;
+    padding-right:15px;
+    padding-left: 15px;
+    padding-bottom: 50px;
+}
+}
 /*Version Ipad*/
 @media screen and (min-width: 378px) and (max-width: 1100px) {
   header {
     margin: 0;
     padding-top: 30px;
     overflow-x: hidden;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
   }
   body {
     width: 100%;
@@ -513,7 +682,7 @@ footer {
   .populaire p {
     position: absolute;
     padding-left: 260px;
-    padding-top: 15px;
+    padding-top: 30px;
     font-size: 18px;
   }
 
@@ -764,7 +933,7 @@ footer {
     margin-right: 20px;
     margin-left: 20px;
   }
-  section h3 {
+  section h2 {
     margin-left: 20px;
     margin-top: 20px;
   }
@@ -882,3 +1051,5 @@ footer {
     margin-top: 20px;
   }
 }
+
+
