--- a/styles.css
+++ b/styles.css
@@ -380,9 +380,9 @@ footer {
   }
 }
 
-@media screen and (min-width:1300px) and (max-width:1400px){
+@media screen and (min-width:1320px) and (max-width:1410px){
   .hotel img {
-    width: 220px;
+    width: 200px;
     height: 110px;
     border-bottom: solid 70px white;
     margin-right: 30px;
@@ -402,7 +402,7 @@ footer {
     padding-bottom: 0;
   }
   #populaires{
-    width: 50%;
+    width: 40%;
   }
   .populaire img {
     height: 170px;
@@ -443,7 +443,7 @@ footer {
     padding-bottom: 0;
   }
   #populaires{
-    width: 50%;
+    width: 40%;
   }
   .populaire img {
     height: 170px;
@@ -461,7 +461,7 @@ footer {
     padding-bottom: 50px;
 }
 }
-@media screen and (min-width:1215px) and (max-width:1300px){
+@media screen and (min-width:1235px) and (max-width:1320px){
   .hotel img {
     width: 180px;
     height: 110px;
@@ -472,7 +472,7 @@ footer {
   }
   .hotel p{
     font-size: 15px;
-    padding-left: 45px;
+    padding-left: 40px;
     padding-bottom: 25px;
   }
   h2{
@@ -483,7 +483,7 @@ footer {
     padding-bottom: 0;
   }
   #populaires{
-    width: 50%;
+    width: 40%;
   }
   .populaire img {
     height: 170px;
@@ -501,19 +501,19 @@ footer {
     padding-bottom: 50px;
 }
 }
-@media screen and (min-width:1100px) and (max-width:1230px){
+@media screen and (min-width:1000px) and (max-width:1260px){
   .hotel img {
     width: 200px;
     height: 110px;
     border-bottom: solid 70px white;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-bottom: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 30px;
   }
   .hotel p{
     font-size: 15px;
-    padding-left: 45px;
-    padding-bottom: 15px;
+    padding-left: 40px;
+    padding-bottom: 25px;
   }
   h2{
     padding-left: 15px;
@@ -526,53 +526,14 @@ footer {
     width: 30%;
   }
   .populaire img {
-    height: 130px;
-    width: 140px;
-    border-right: solid 180px white;
-    margin-bottom: 40px;
+    height: 150px;
+    width: 130px;
+    border-right: solid 200px white;
+    margin-bottom: 70px;
   }
   .populaire p {
-    padding-left: 190px;
-    }
-  #hébergements{
-    width:70%;
-    padding-right:15px;
-    padding-left: 15px;
-    padding-bottom: 50px;
-}
-}
-@media screen and (min-width:100px) and (max-width:1120px){
-  .hotel img {
-    width: 180px;
-    height: 110px;
-    border-bottom: solid 70px white;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-bottom: 10px;
-  }
-  .hotel p{
+    padding-left: 200px;
     font-size: 15px;
-    padding-left: 45px;
-    padding-bottom: 15px;
-  }
-  h2{
-    padding-left: 15px;
-  }
-  .btnaffiche{
-    padding-left:40px;
-    padding-bottom: 0;
-  }
-  #populaires{
-    width: 30%;
-  }
-  .populaire img {
-    height: 130px;
-    width: 140px;
-    border-right: solid 180px white;
-    margin-bottom: 40px;
-  }
-  .populaire p {
-    padding-left: 190px;
     }
   #hébergements{
     width:70%;
@@ -581,6 +542,7 @@ footer {
     padding-bottom: 50px;
 }
 }
+  
 /*Version Ipad*/
 @media screen and (min-width: 378px) and (max-width: 1100px) {
   header {
@@ -661,7 +623,7 @@ footer {
   /*Populaires*/
   
   #populaires {
-    height: 880px;
+    height: auto;
     width: 82%;
     margin: 0;
     margin-bottom: 50px;
@@ -674,6 +636,7 @@ footer {
     height: 210px;
     width: 200px;
     border-right: solid 350px white;
+    margin-bottom: 20px;
   }
 
   .populaire {
