--- a/Reservia.css
+++ b/Reservia.css
@@ -522,7 +522,7 @@ footer {
   .inscription {
     font-size: 16px;
     margin-right: 0px;
-    padding-right: 20px;
+    padding-right: 30px;
   }
   #logo {
     width: 100px;
@@ -551,6 +551,19 @@ footer {
     padding-left: 0px;
     padding-right: 0px;
   }
+
+  @media screen and (min-width:400px) and (max-width:755px) {
+    .ancre {
+        font-size: 15px;
+        margin: 0;
+        width: 100%;
+        border-bottom: solid#f2f2f2;
+        margin-top: 10px;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        padding-right: 20px;
+        padding-left: 20%;
+      }  }
   header h3 {
     margin-top: 0px;
     margin-left: 20px;
@@ -630,13 +643,14 @@ footer {
     width: 100%;
   }
   .mobilecolumn .filtre:nth-child(1) {
-    margin-right: 180px;
+    width: 200px;
     margin-bottom: 20px;
   }
   .mobilecolumn .filtre:nth-child(2) {
-    margin-right: 100px;
+    width: 250px;
     margin-bottom: 20px;
   }
+  
   .filtre {
     border: solid 3px #f2f2f2;
     border-radius: 50px;
