--- a/Reservia.css
+++ b/Reservia.css
@@ -18,7 +18,6 @@ a {
   text-decoration-line: none;
   color: black;
 }
-
 a:hover,
 .ancre:hover {
   color: #0065fc;
@@ -29,9 +28,6 @@ header h3 {
 }
 strong {
   font-weight: bold;
-}
-img {
-  object-fit: cover;
 }
 
 
@@ -79,14 +75,16 @@ header {
   background-color: #f2f2f2;
   border-radius: 10px 0px 0px 10px;
   padding: 17px 17px 17px 17px;
+  margin-right: -5px;
 }
 #clic {
   border: solid 1px #f2f2f2;
   border-left: none;
   border-right: none;
-  padding: 15px 15px 15px 15px;
+  padding: 14px 14px 14px 14px;
   font-size: 1em;
   font-weight: bold;
+  margin-right: -5px;
 }
 #bouton {
   display: initial;
@@ -596,6 +594,7 @@ footer {
   #loupe {
     visibility: visible;
   }
+
   #loupe .fas {
     color: white;
     background-color: #0065fc;
@@ -603,7 +602,7 @@ footer {
     border: none;
     padding: 18px 17px 17px 17px;
     font-weight: 600;
-    margin-left: -10px;
+    margin-left: -15px;
     margin-right: 20px;
   }
   #mobileversion {
